<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="0dp"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:suffixText="@string/currency_sign"
            app:suffixTextAppearance="@style/SuffixAmountTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_transaction_fragment_margin_start"
                android:layout_marginTop="@dimen/edit_transaction_fragment_margin_top"
                android:layout_marginEnd="@dimen/edit_transaction_fragment_margin_end"
                android:layout_marginBottom="@dimen/edit_transaction_fragment_margin_bottom"
                android:hint="@string/amount"
                android:inputType="number"
                android:textSize="@dimen/edit_transaction_fragment_amount_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/income_button"
            android:layout_width="@dimen/transaction_type_button_width_height"
            android:layout_height="@dimen/transaction_type_button_width_height"
            android:layout_margin="@dimen/transaction_type_button_margin"
            android:background="@drawable/btn_income_inactive"
            android:contentDescription="@string/income_transaction"
            app:layout_constraintEnd_toStartOf="@+id/expense_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_text_input_layout" />

        <Button
            android:id="@+id/expense_button"
            android:layout_width="@dimen/transaction_type_button_width_height"
            android:layout_height="@dimen/transaction_type_button_width_height"
            android:layout_margin="@dimen/transaction_type_button_margin"
            android:background="@drawable/btn_expense_inactive"
            android:contentDescription="@string/expense_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/income_button"
            app:layout_constraintTop_toBottomOf="@+id/amount_text_input_layout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_text_input"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_transaction_fragment_margin"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/today"
            app:layout_constraintBottom_toTopOf="@+id/recently_categories_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/income_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recently_categories_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_transaction_fragment_margin_start"
            android:text="@string/categories"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/categories_rv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_text_input" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_transaction_fragment_margin_start"
            android:layout_marginTop="@dimen/edit_transaction_fragment_margin_top"
            android:layout_marginEnd="@dimen/edit_transaction_fragment_margin_end"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recently_categories_tv" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_transaction_fragment_margin"
            android:hint="@string/transaction_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_rv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

